# hollowtide

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
client/: Cargo.toml
client/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
web/: index.html
